2006-09-13  Michael Natterer  <mitch@gimp.org>

	Need to be more careful with setting a tool's focus_dislay now
	that tools can receive modifier events in more circumstances
	(fixes warnings with GimpEditSelectionTool)

	* app/tools/gimptool.c (gimp_tool_button_release): ref the tool
	around the function's body (GimpEditSelectionTool unrefs itself in
	button_release()), don't reset the active_modifier_state if it is 0.

	(gimp_tool_set_focus_display): reset the active_modifier_state if
	it is != 0 and the tool had an old focus_display.

	* app/tools/tool_manager.c (tool_manager_push,pop_tool): set the
	old active_tool's focus_display on the new one.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* Makefile.am
	* configure.in
	* po-python: added basic infrastructure for a gimp20-python
	translation domain.

	* plug-ins/pygimp/plug-ins/gimpcons.py
	* plug-ins/pygimp/plug-ins/gtkcons.py: mark some strings for
	translation, based on a patch from David Gowers (bug #351287).

2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpperspectiveclonetool.h: added macro
	GIMP_PERSPECTIVE_CLONE_TOOL_GET_OPTIONS()

	* app/tools/gimpperspectiveclonetool.c: use it. Some minor
	cleanups, removed unused includes.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/color.pdb
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/image.pdb
	* tools/pdbgen/pdb/layer.pdb
	* tools/pdbgen/pdb/paint_tools.pdb
	* tools/pdbgen/pdb/selection_tools.pdb: use the canonical form when
	refering to parameters in the procedure description.

2006-09-13  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpsmudge.c: cosmetic cleanups, renamed
	gimp_smudge_nonclipped_painthit_coords() to
	gimp_smudge_brush_coords ().

2006-09-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpcroptool.c (gimp_crop_tool_register): removed
	"Resize" from the tool name and description.

2006-09-13  Sven Neumann  <sven@gimp.org>

	* app/dialogs/preferences-dialog.c: changed mnemonics (bug #355761).
