@@ -1,3 +1,12 @@
+2006-09-14  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpcontainerentry.c: implement
+	GimpContainerView::set_context() and set the renderers'
+	contexts. Fixes more preview rendering warnings.
+	Connect to GtkEntryCompletion::match-selected in addition to
+	GtkEntry::changed to select the active item. Makes the whole
+	thing work a lot better.
+
 2006-09-13  Michael Natterer  <mitch@gimp.org>
 
 	Need to be more careful with setting a tool's focus_dislay now
